--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
+
 {% block content %}
+<h1> Welcome </h1>
 <p> This is a landing page for a website I am developing for fun</p>
-<p> Some stuff about me, big picture and a blurb</p>
+<p> Some stuff about me a big picture and a blurb</p>
 {% endblock %}
