Adding Health Score Write Up

--- a/flask/templates/digits.html
+++ b/flask/templates/digits.html
@@ -20,5 +20,5 @@
   <button id="submitBtn" onclick="submitCanvas()">Submit</button>
   <p id="response"></p>
   <p> The model was trained on batches of 100, for 20,000 iterations, resulting in a 97% accuracy.<p>
-  <p> There is preprocessing to crop the white space, and transform the image into a 784 dimensional vector.</p>
+  <p> Preprocessing is needed to center and transform the image into a 784 dimensional vector.</p>
 {% endblock %}
