--- a/flask/static/css/layout.css
+++ b/flask/static/css/layout.css
@@ -8,13 +8,13 @@ body {
     font-family: 'Poppins', sans-serif;
     background: #ffffff;
 }
-
+@import "https://fonts.googleapis.com/css?family=Lato";
 p {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
-    color: #00887a;
+    color: #000000;
 }
 
 a,
