--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -32,11 +32,12 @@
           <h3>Arthur Sams</h3>
         </div>
         <div class="bio-pic text-center">
-            <img src="https://www.w3schools.com/howto/img_avatar.png" class="img-circle" width="100" height="100">
+            <img src="static/img/arthur_headshot.png" class="img-circle" width="150" height="150">
         </div>
         <div class="bio">
-          <p> Math & CS, Cornell University  <p>
-          <p> Xoogler, Adventurer</p>
+          <p> Math and CS, Cornell University  <p>
+          <p> Xoogler and Adventurer </p>
+          <p> Los Angeles Native</p>
         </div>
         <ul id="components" class="list-unstyled">
           <li class="active"> <a href="#">Home</a> </li>
