--- a/flask/templates/health_scores.html
+++ b/flask/templates/health_scores.html
@@ -37,9 +37,9 @@
   <p> A restaurant scoring under 70 twice within 12 months are subject to closure, and any major infractions may require closure regardless of score.</p>
   <img src="static/img/health_project/health_score_barplot.png" width="800" height="400">
 
-  <p> The score distribution looks tri-modal, with peaks occuring around 97, 86, and 76. </p>
+  <p> The score distribution looks tri-modal, with peaks occuring around 97, 85, and 76. </p>
 
-  <!--> Note to self: Maybe plot QQ Probability/ Normality Test? -->
+  <!-- Note to self: Maybe plot QQ Probability/ Normality Test? -->
   <p> The boundaries between grades look abnormal. Specifically look at the difference between 90-89 and 80-79.
       It seems like inspectors are using their discretion to push boarderline cases to the next highest grade.</p>
 
@@ -50,9 +50,10 @@
     <p> There indeed seems to be a slight positive correlation between health score and yelp review.</p>
     <p> We saw from the grade distributions that there is not much data in the C range (2%), if we had more points the averages may show less variance and converge
         to the regression line.</p>
-
+Maybe pull the restaurant at around 73 with the 2 score and see what reviews say?
   <p> Investigating further, it seems higher rated restaurants have more 4 star reviews and fewer 3. All other
-      scores are very evenly distributed. 4 is positvely correlated with score (R=.56) and 3 negative (R=.70). 
+      scores are very evenly distributed. It seems just one star differnece in reviews sets restaurants a pars.
+      4 is positvely correlated with score (R=.56) and 3 negative (R=.70). 
       Again below 80 the data is very high in variance.
   </p>
 
