Working on BBox

--- a/flask/templates/digits.html
+++ b/flask/templates/digits.html
@@ -21,4 +21,7 @@
   <p id="response"></p>
   <p> The model was trained on batches of 100, for 20,000 iterations, resulting in a 97% accuracy.<p>
   <p> Preprocessing is needed to center and transform the image into a 784 dimensional vector.</p>
+  <p> This is some of the pre processing: </p>
+  <img id="moded" src="" style="border-style: solid;border-width: 3px; border-color: red;"/> 
+
 {% endblock %}
