--- a/flask/templates/digits.html
+++ b/flask/templates/digits.html
@@ -7,7 +7,8 @@
 {% block content %}
   <h1>Digit Recognizer</h1>
   <p> This project uses a Convolutional Neural Network programmed in Tensorflow to recognize a digit drawn in an HTML5 canvas.</p>
-  <p> Give it a try by writing a numeric digit from 0-9, in the box below and click submit.</p>
+  <p> Give it a try by writing a numeric digit from 0-9, in the box below and click submit. 
+      Note The first input will take a while as the machine learning server will need to spin up.</p>
   
   <div id="container">
     <canvas id="imageView" width="84" height="84" style="border: 1px solid #000">
@@ -27,10 +28,12 @@
   </table>
 
   <p> The model was trained on batches of 100, for 20,000 iterations, resulting in a 97% accuracy;
-    however, in practice I find it to be much lower. </p>
-  <p> My guess would be </p>
-  <p> Preprocessing is needed to center and transform the image into a 784 dimensional vector.</p>
-  <p> This is some of the pre processing: </p>
+      however, in practice I find it to be much lower. It is particulary bad at guessing 7's and 1's. </p>
+  <p> My guess would be the input from canvas tool does not look close enough to the training data.</p>
+  <p> I tried to preprocess the data to look like the inputs, by centering and transforming the image, before create the 784 dimensional vector.</p>
+  <p> For instance this is what the input looks like:</p>
   <img id="moded" src="" style="border-style: solid;border-width: 3px; border-color: red;"/> 
+
+  <p> This is what the infrastructure for this project looks like: </p>
 
 {% endblock %}
