--- a/flask/static/css/digits.css
+++ b/flask/static/css/digits.css
@@ -1,8 +1,8 @@
-table {
+#topK table {
     border-collapse: collapse;
 }
 
-table, th, td {
+#topK table, th, td {
     border: 1px solid black;
     padding: 5px;
 }
