--- a/flask/static/css/layout.css
+++ b/flask/static/css/layout.css
@@ -3,11 +3,12 @@
 	https://bootstrapious.com/p/bootstrap-sidebar
 */
 
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+@import "https://fonts.googleapis.com/css?family=Lato";
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Lato', sans-serif;
     background: #ffffff;
 }
+
 @import "https://fonts.googleapis.com/css?family=Lato";
 p {
     font-family: 'Lato', sans-serif;
@@ -149,4 +150,9 @@ a.article:hover {
 
 #content.active {
     width: 100%;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
