--- a/flask/templates/health_scores.html
+++ b/flask/templates/health_scores.html
@@ -63,6 +63,7 @@
         potentially raising a 3 star review 1/2 to 1 more star. (Plot 3 vs 3.5 and 4 vs 4.5) </p>
 
   <p> Let's look at the grades vs {reviews (proxy for popularity), price(??), risk factors}</p>
+  <img src="static/img/health_project/review_ct_vs_health.png" width="800" height="400" class="center">
   <p> 
       Sources:
       Public Health http://publichealth.lacounty.gov/eh/misc/ehpost.htm
